2010-05-17  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        [Chromium] Windows: Speed of indeterminate progress bar should be constant
        https://bugs.webkit.org/show_bug.cgi?id=39211

        No new tests, animation effect can be confirmed only manually.

        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::animationDurationForProgressBar):
        (WebCore::RenderThemeChromiumWin::paintProgressBar):

Canonical link: https://commits.webkit.org/50771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59635 268f45cc-cd09-0410-ab3c-d52691b4dbfc